[package]
name = "rux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
futures-util = "0.3.32"
indicatif = "0.18.4"
librqbit = "8.1.1"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
sha2 = "0.10.8"
md5 = "0.7.0"

[build-dependencies]
cc = "1.0"
